correct usage of BEM naming in 404 and sign in pages
remove extra spacing around sign-in wrapper in sign in page

--- a/public/assets/styles/404.css
+++ b/public/assets/styles/404.css
@@ -44,7 +44,7 @@ main {
   font-size: 16px;
 }
 
-.nf__container {
+.nf {
   margin: 0px auto;
 }
 
