--- a/public/assets/styles/sign-in.css
+++ b/public/assets/styles/sign-in.css
@@ -44,7 +44,7 @@ main {
   font-size: 16px;
 }
 
-.sign-in__container {
+.sign-in {
   position: relative;
   display: flex;
   justify-content: center;
@@ -68,7 +68,6 @@ main {
 
 .sign-in__wrapper {
   max-width: 512px;
-  padding: 16px 0px;
 }
 
 .signed-in__bold-text {
